nimbus/hello-minikube-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-minikube-nimbus
  labels:
    app: hello-minikube
spec:
  replicas: 4
  template:
    metadata:
      name: hello-minikube
      labels:
        app: hello-minikube
    spec:
      containers:
        - name: hello-minikube
          image: k8s.gcr.io/echoserver:1.4
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: hello-minikube
