nimbus/hello-minikube-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-minikube-service
  labels:
    app: hello-minikube
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 31900
  selector:
    app: hello-minikube
